fix z-index header

--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -7,6 +7,13 @@
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	/* height: 100vh; */
+	
+}
+.header {
+	z-index: 2;
+}
+.container {
+	z-index: -1;
 }
 
 @keyframes gradient {
